# sol

./: .dir-locals.el  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  Rocket.toml  queries.restclient  sol.org
.github/workflows/: sol.yml
ansible/: playbook.yml  requirements.yml
ansible/templates/: nginx-le.j2  sol.service.j2
ansible/vars/: creds-encrypted.yml
landing/: faq.html  fonts.css  hero.css  index.html  landing.html  mailchimp.js  other.html  style.css
migrations/2018-10-09-133728_create_users/: up.sql
migrations/2018-10-10-145242_create_tokens/: down.sql  up.sql
migrations/2018-10-11-132109_users_add_password/: down.sql  up.sql
migrations/2018-10-11-220022_create_sensors/: down.sql  up.sql
migrations/2018-10-15-131700_tokens_add_sensor_type/: down.sql  up.sql
migrations/2018-11-08-231345_create_readings/: down.sql  up.sql
migrations/2018-11-16-230311_sensors_add_active/: down.sql  up.sql
migrations/2018-11-18-032425_readings_add_real_fields/: down.sql  up.sql
migrations/2018-11-18-034956_readings_add_timestamp/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  result.rs  schema.rs  tests.rs
static/: reading-charts.js  static-chart.js  stats-charts.js  style.css
templates/: base.html.tera  change_password.html.tera  forgot_password.html.tera  index.html.hbs  index.html.tera  landing.html.tera  login.html.tera  register.html.hbs  register.html.tera  sensor.html.hbs  sensor.html.tera  sensor_deactivate.html.tera  sensor_edit.html.tera  user.html.hbs  user.html.tera  user_edit.html.tera  users.html.hbs  users.html.tera
(+35 files in other folders)
