[package]
name = "sol"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
base64 = "0.10"
rand = "0.5"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", features = ["handlebars_templates", "diesel_sqlite_pool"] }
diesel = { version = "1.3.3", features = ["sqlite"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"