[package]
name = "sol"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
argon2rs = "0.2.5"
base64 = "0.10"
rand = "0.5"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4", features = ["tera_templates", "diesel_sqlite_pool"] }
diesel = { version = "1.3.3", features = ["sqlite"] }
diesel_migrations = "1.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"