[package]
name = "sol"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
argon2rs = "0.2.5"
base64 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.3", features = ["sqlite", "chrono"] }
diesel_migrations = "1.3.3"
insta = "0.8.1"
rand = "0.5"
rocket = "0.4.2"
rocket-slog = "0.4"
rocket_codegen = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["tera_templates", "diesel_sqlite_pool"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"
sloggers = "0.3"